Closed Bug 1656039 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::net::DocumentLoadListener::ClaimParentLoad]

Categories

(Core :: Networking, defect)

79 Branch
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- wontfix
firefox80 --- fixed
firefox81 --- fixed

People

(Reporter: philipp, Assigned: jya)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-60f70f21-13cd-4749-bb15-5d47a0200729.

Top 10 frames of crashing thread:

0 xul.dll static mozilla::net::DocumentLoadListener::ClaimParentLoad netwerk/ipc/DocumentLoadListener.cpp:662
1 xul.dll mozilla::net::DocumentChannelParent::Init netwerk/ipc/DocumentChannelParent.cpp:40
2 xul.dll mozilla::net::NeckoParent::RecvPDocumentChannelConstructor netwerk/ipc/NeckoParent.cpp:339
3 xul.dll mozilla::net::PNeckoParent::OnMessageReceived ipc/ipdl/PNeckoParent.cpp:2287
4 xul.dll mozilla::dom::PContentParent::OnMessageReceived ipc/ipdl/PContentParent.cpp:6285
5 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2093
6 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1972
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
8 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:504
9 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:87

this crash signature is starting to show up in firefox 79 (across platforms) - the top frames in the stack in crash reports point to some code last changed in bug 1641737.

a number of crashing urls are apps hosted on ip addresses, not just domain names...

Flags: needinfo?(jyavenard)
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0260b9ef8c6c Fall back to content initiating the load if parent went away. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

The patch landed in nightly and beta is affected.
:jya, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jyavenard)

Comment on attachment 9167218 [details]
Bug 1656039 - Fall back to content initiating the load if parent went away. r?mattwoodrow

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes under some shutdown circumstances
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We add a check for null and default to the old way of doing things
  • String changes made/needed:
Flags: needinfo?(jyavenard)
Attachment #9167218 - Flags: approval-mozilla-beta?

Comment on attachment 9167218 [details]
Bug 1656039 - Fall back to content initiating the load if parent went away. r?mattwoodrow

crash fix, approved for 80.0b4

Attachment #9167218 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: