Bug 1656039 - Fall back to content initiating the load if parent went away. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D85519